Completed TypeGraphMap